# napari-plugin-engine

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  HOWTORELEASE.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  test.yml
changelog/: _template.rst
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css  rtd.css
napari_plugin_engine/: __init__.py  _testsupport.py  callers.py  config.py  dist.py  exceptions.py  hooks.py  implementation.py  manager.py  markers.py  validation.py
napluggy/: hooks.py  manager.py
naplugi/: __init__.py  _testsupport.py  callers.py  exceptions.py  hooks.py  implementation.py  manager.py  markers.py  plugin.py  testsupport.py
testing/: benchmark.py  conftest.py  test_call_ordering.py  test_deprecations.py  test_details.py  test_discovery.py  test_fixtures.py  test_helpers.py  test_hookcaller.py  test_invocations.py  test_multicall.py  test_pluginmanager.py  test_pypi.py  test_testsupport.py  test_tracer.py
