[metadata]
name = napari-plugin-engin
url = https://github.com/napari/napari-plugin-engine
license = MIT
license_file = LICENSE
description = napari plugin engine, fork of pluggy
long_description = file: README.md
long_description_content_type = text/markdown
author = napari team
author_email = napari-steering-council@googlegroups.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.6
install_requires =
    importlib-metadata>=1.5.0; python_version < "3.8"


[options.extras_require]
test =
    pytest
    pytest-cov
dev = 
    %(test)s
    pre-commit
    tox
    tox-conda

[options.entry_points]
pytest11 =
    napari-plugin-engine = napari_plugin_engine._testsupport

[flake8]
max-line-length=88
